--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Selamat Datang di Toko Sayuran Segar</h1>
+        <h1>Toko Sayuran Segar</h1>
     </header>
     <main>
         <section id="produk">
